# physics_reinforcement_learning_environment

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
example_worlds/: jump.json  push.json  right.json
src/: algorithm.rs  common.rs  editor.rs  game.rs  lib.rs  main.rs  train.rs
src/train/agent/: dqn.rs  genetic.rs  mod.rs
