[package]
name = "physics_reinforcement_learning_environment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.3"
bevy_rapier2d = { version = "0.21.0", features = [ "enhanced-determinism" ] }
rfd = "0.11.4"
serde = "1.0.166"
serde_json = "1.0.100"
