[package]
name = "physics_reinforcement_learning_environment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.3"
crossbeam = "0.8"
dfdx = "0.13.0"
rand = "0.8.5"
rapier2d = { version = "0.17.2", features = [ "enhanced-determinism" ] }
rfd = "0.11.4"
serde = "1.0.166"
serde_json = "1.0.100"
